# zkvm-benchmark

./: .gitignore  Justfile  README.md
go/: fib.go  fib_wasm.go  fib_wasm_bigint.go
go/fib/: go.mod  main.go
rust/fib/: Cargo.toml
rust/fib-wasm/: Cargo.toml  Justfile
rust/fib-wasm-bigint/: Cargo.toml  Justfile
rust/fib-wasm-bigint/src/: lib.rs
rust/fib-wasm/src/: lib.rs
rust/fib/src/: main.rs
zkvm/fib/: Cargo.toml  Justfile  README.md
zkvm/fib/methods/: Cargo.toml
zkvm/fib/methods/guest/: Cargo.toml
zkvm/fib/methods/guest/src/: main.rs
zkvm/fib/src/: cli.rs  executor.rs  lib.rs  main.rs
zkvm/hello-world/: .rustfmt.toml  Cargo.toml  Justfile  README.md
zkvm/hello-world/methods/: Cargo.toml
zkvm/hello-world/methods/guest/: Cargo.toml
zkvm/hello-world/src/: lib.rs  main.rs
zkvm/wasm/: Cargo.toml  Justfile  README.md  fib  fib.go
zkvm/wasm/methods/guest/: Cargo.toml
zkvm/wasm/methods/guest/src/: main.rs
zkvm/wasm/src/: cli.rs  executor.rs  main.rs
zkwasm/: README.md
zkwasm/fib/: Justfile  Justfile.input  fib.go  fib_zkgo.go  run_with_input.sh  write_witness.py
zkwasm/zkwasm-emulator/: package.json  wasi_exec_node.js
