[package]
name = "zkvm-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = "0.19.1"
wasm-methods = { path = "methods" }
wat = "1.0.71"
clap = { version = "4.4.11", features = ["derive"] }

[features]
default = []
cuda = ["risc0-zkvm/cuda"]
metal = ["risc0-zkvm/metal"]
prove = ["risc0-zkvm/prove"]
